# Windows-Position-Independent-Shellcode

./: .gitignore  CMakeLists.txt  README.md
include/: Common.h  Native.h  Utils.h
scripts/: Linker.ld  extract.py
src/: main.c  pic.asm
src/Util/: Ldr.c  Util.c
